Removed extra space under range selectors. Fixed 63o- bug

--- a/src/RangeBtn/RangeBtn.css
+++ b/src/RangeBtn/RangeBtn.css
@@ -55,6 +55,6 @@
 #rb-content{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 0;
     font-size: 1.25vw;
 }
